# mtfind

./: .gitignore  CMakeLists.txt  README.md  filereader.cpp  filereader.h  main.cpp  mtfind.cpp  mtfind.h  output.cpp  output.h  patternsearcher.cpp  patternsearcher.h  tests.h
